--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "mocha": "^10.7.3",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "get-stream": "^9.0.1"
   }
 }
