--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,55 @@
-name: Run WebdriverIO Tests
+name: WebdriverIO
 
-on: [push, pull_request]
+on:
+  workflow_dispatch:
+
+  push:
+    branches: [master]
+
+  pull_request:
+    branches: [master]
 
 jobs:
   test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: "16"
+          node-version: 18
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Run WebdriverIO tests
-        run: npx wdio run ./wdio.conf.yml
+      - name: Test Chrome
+        run: npm run test:chrome
+        env:
+          group: "UI-Chrome"
+          TZ: Europe/Warsaw
 
-      - name: Generate Allure report
-        run: allure generate ./allure-results --clean -o ./allure-report
-
-      - name: Upload Allure report
-        uses: actions/upload-artifact@v3
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
         with:
-          name: allure-report
-          path: ./allure-report
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        with:
+          allure_results: reports/allure-result
+          allure_history: reports/allure-history
+          keep_reports: 10
+
+      - name: Deploy report to Github Pages
+        uses: peaceiris/actions-gh-pages@v2
+        if: always()
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: reports/allure-history
