--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm ci
 
       - name: Test Chrome
-        run: npm run test:chrome
+        run: npm run test
         env:
           group: "UI-Chrome"
           TZ: Europe/Warsaw
