--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,10 @@ on:
   workflow_dispatch:
 
   push:
-    branches: [master]
+    branches: [main]
 
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   test:
@@ -15,21 +15,36 @@ jobs:
     runs-on: ubuntu-latest
     name: E2E on Chrome
 
+    services:
+      docker:
+        image: selenium/standalone-chrome:latest
+        options: >
+          --shm-size=2g  # Встановлення розміру спільної пам'яті, щоб уникнути помилок Chrome
+        ports:
+          - 4444:4444
+        env:
+          START_XVFB: "false"
+          SE_OPTS: "-enablePassThrough false"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up Docker
+        run: |
+          docker pull selenium/standalone-chrome:latest
+
       - name: Install Dependencies
-        run: npm ci
+        run: docker run --rm -v ${{ github.workspace }}:/e2e -w /e2e node:18-alpine npm ci
 
       - name: WebDriverIO Tests
-        run: npm run test
+        run: docker run --rm -v ${{ github.workspace }}:/e2e -w /e2e selenium/standalone-chrome:latest npm run test
         env:
           TZ: Europe/Warsaw
           NODE_ENV: production
 
       - name: Generate Allure Report
-        run: npx allure generate allure-results --clean -o allure-report
+        run: docker run --rm -v ${{ github.workspace }}:/e2e -w /e2e node:18-alpine npx allure generate allure-results --clean -o allure-report
 
       - name: Upload Allure Report
         uses: actions/upload-artifact@v4
