--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: WDIO Tests
+name: WDIO/Allur/Docker Tests
 
 on:
   workflow_dispatch:
@@ -19,7 +19,7 @@ jobs:
       docker:
         image: selenium/standalone-chrome:latest
         options: >
-          --shm-size=2g  # Встановлення розміру спільної пам'яті, щоб уникнути помилок Chrome
+          --shm-size=2g
         ports:
           - 4444:4444
         env:
@@ -31,20 +31,35 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Docker
-        run: |
-          docker pull selenium/standalone-chrome:latest
+        run: docker pull selenium/standalone-chrome:latest
 
       - name: Install Dependencies
-        run: docker run --rm -v ${{ github.workspace }}:/e2e -w /e2e node:18-alpine npm ci
+        run: |
+          docker run --rm \
+          -v ${{ github.workspace }}:/e2e \
+          -w /e2e \
+          node:18-alpine \
+          npm ci
 
       - name: WebDriverIO Tests
-        run: docker run --rm -v ${{ github.workspace }}:/e2e -w /e2e selenium/standalone-chrome:latest npm run test
+        run: |
+          docker run --rm \
+          -v ${{ github.workspace }}:/e2e \
+          -w /e2e \
+          --shm-size=2g \
+          selenium/standalone-chrome:latest \
+          npm run test
         env:
           TZ: Europe/Warsaw
           NODE_ENV: production
 
       - name: Generate Allure Report
-        run: docker run --rm -v ${{ github.workspace }}:/e2e -w /e2e node:18-alpine npx allure generate allure-results --clean -o allure-report
+        run: |
+          docker run --rm \
+          -v ${{ github.workspace }}:/e2e \
+          -w /e2e \
+          node:18-alpine \
+          npx allure generate allure-results --clean -o allure-report
 
       - name: Upload Allure Report
         uses: actions/upload-artifact@v4
