--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: WDIO Tests
+name: WebdriverIO
 
 on:
   workflow_dispatch:
@@ -13,48 +13,43 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    name: E2E on Chrome
-
-    services:
-      selenium:
-        image: selenium/standalone-chrome:latest
-        options: >
-          --shm-size=2g
-        ports:
-          - 4444:4444
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Dependencies
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install dependencies
         run: npm ci
 
-      - name: WebDriverIO Tests
+      - name: Test Chrome
         run: npm run test:setting
         env:
+          group: "UI-Chrome"
           TZ: Europe/Warsaw
-          NODE_ENV: production
 
-      - name: Generate Allure Report
-        run: npx allure generate allure-results --clean -o allure-report
-
-      - name: Upload Allure Report
-        uses: actions/upload-artifact@v4
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
         with:
-          name: allure-report
-          path: allure-report
+          ref: gh-pages
+          path: gh-pages
 
-      - name: Screenshots report
-        uses: actions/upload-artifact@v4
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
         with:
-          name: wdio-screenshots
-          path: ./screenshots
-          if-no-files-found: ignore
+          allure_results: reports/allure-result
+          allure_history: reports/allure-history
+          keep_reports: 10
 
-      - name: Video report
-        uses: actions/upload-artifact@v4
-        with:
-          name: wdio-videos
-          path: ./videos
-          if-no-files-found: ignore
+      - name: Deploy report to Github Pages
+        uses: peaceiris/actions-gh-pages@v2
+        if: always()
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: reports/allure-history
